@@ -5,6 +5,8 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
       {r,R}unParameters.xml), added an optional 'runfolder_path' attribute.
       The attribute will have to be set by the caller.
    2. Added a new applicability criteria type - 'sequencing_run'
+   3. To avoid running the reviewcheck unnecessary in the pipeline context,
+      moved ROBO criteria validation to the can_run method.
 
 release 72.1.2 (2024-08-05)
  - handle cases where the same tag sequence is seen in both index reads
